// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchResults should render self with error 1`] = `
<div
  className="searchResults isOpen"
>
  <ErrorState
    color="black"
    message="Error requesting videos."
  />
</div>
`;

exports[`SearchResults should render self with loader 1`] = `
<div
  className="searchResults isOpen"
>
  <Loader />
</div>
`;

exports[`SearchResults should render self with no results 1`] = `
<div
  className="searchResults isOpen"
>
  <BlankState
    color="black"
    message="No videos found."
  />
</div>
`;

exports[`SearchResults should render self with results 1`] = `
<div
  className="searchResults isOpen"
>
  <InfiniteScroll
    isFetching={false}
    loadMore={[MockFunction]}
    maxHeight="350px"
    pageToken="token"
  >
    <ul
      className="results"
    >
      <Video
        description=""
        handleClick={[Function]}
        isSearchResult={true}
        key="1"
        publishedAt="publishedAt"
        thumbnail="thumbnail.jpg"
        title="title"
        viewCount="1"
      />
      <Video
        description=""
        handleClick={[Function]}
        isSearchResult={true}
        key="2"
        publishedAt="publishedAt"
        thumbnail="thumbnail.jpg"
        title="title"
        viewCount="1"
      />
    </ul>
  </InfiniteScroll>
</div>
`;

exports[`SearchResults should render self with results 2`] = `
<div
  className="searchResults isOpen"
>
  <InfiniteScroll
    isFetching={true}
    loadMore={[MockFunction]}
    maxHeight="350px"
    pageToken="token"
  >
    <ul
      className="results"
    >
      <Video
        description=""
        handleClick={[Function]}
        isSearchResult={true}
        key="1"
        publishedAt="publishedAt"
        thumbnail="thumbnail.jpg"
        title="title"
        viewCount="1"
      />
      <Video
        description=""
        handleClick={[Function]}
        isSearchResult={true}
        key="2"
        publishedAt="publishedAt"
        thumbnail="thumbnail.jpg"
        title="title"
        viewCount="1"
      />
    </ul>
  </InfiniteScroll>
</div>
`;
